# devin-test-share-1

./: .coverage  .gitignore  Dockerfile  README.md  addition.py  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/api/: pyproject.toml
backend/api/app/: database.py
command_reference/: README.md  browser_operations.py  deployment.py  file_operations.py  search_analysis.py  shell_commands.py  utilities.py
command_reference/docs/: browser_operations.md  deployment.md  file_operations.md  search_analysis.md  shell_commands.md  utilities.md
examples/: sample_usage.py
frontend/web/: package-lock.json  package.json
frontend/web/src/: App.tsx
src/: config.py  main.py
src/__tests__/: orchestrator.test.ts
src/agents/: types.ts
src/api/: routes.py
src/models/: prompt.py  workflow.ts
src/orchestrator/: orchestrator.ts  taskManager.ts  workflowEngine.ts
src/prompt_generator/core/: prompt_generator.py  requirement_parser.py
src/prompt_generator/models/: prompt.py  requirement.py
src/prompt_generator/utils/: validators.py
src/services/: openai_service.py
tests/: test_api.py  test_prompt_generator.py  test_requirement_parser.py  test_validators.py
