[tool.poetry]
name = "prompt-generator"
version = "0.1.0"
description = "AIエージェント向けシステムプロンプト生成システム"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39']
